// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utility Props API matches Div 1`] = `
@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class=""
/>
`;

exports[`Utility Props API matches Div with 0 border 1`] = `
.c0 {
  border-left: 0;
  border-right: 0;
  border-top: 0;
  border-bottom: 0;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with align 1`] = `
.c0 {
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with align 2`] = `
.c0 {
  -webkit-align-content: end;
  -ms-flex-line-pack: end;
  align-content: end;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with align 3`] = `
.c0 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with align 4`] = `
.c0 {
  -webkit-align-content: baseline;
  -ms-flex-line-pack: baseline;
  align-content: baseline;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with align 5`] = `
.c0 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with auto margin 1`] = `
.c0 {
  margin-left: auto;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with clearfix 1`] = `
.c0 {
  display: block;
  content: '';
  clear: both;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with colored border 1`] = `
.c0 {
  border-left: 1px solid;
  border-right: 1px solid;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #007bff;
  border-color: #007bff;
  border-color: #007bff;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with colored text and background 1`] = `
.c0 {
  color: #f0f0f0;
  background-color: #343a40;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with flex grow 1`] = `undefined`;

exports[`Utility Props API matches Div with flex grow 2`] = `undefined`;

exports[`Utility Props API matches Div with flex shrink 1`] = `undefined`;

exports[`Utility Props API matches Div with flex shrink 2`] = `undefined`;

exports[`Utility Props API matches Div with flex wrap 1`] = `undefined`;

exports[`Utility Props API matches Div with flex wrap 2`] = `undefined`;

exports[`Utility Props API matches Div with flex wrap 3`] = `undefined`;

exports[`Utility Props API matches Div with hidden text 1`] = `
.c0 {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
>
  text
</div>
`;

exports[`Utility Props API matches Div with italic 1`] = `
.c0 {
  font-style: italic;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with margin and size 1`] = `
.c0 {
  margin-left: 0rem;
  margin-right: 0rem;
  margin-top: 0rem;
  margin-bottom: 0rem;
}

@media (min-width:576px) {

}

@media (min-width:768px) {
  .c0 {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with monospace 1`] = `
.c0 {
  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with order 1`] = `
.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with padding and margin 1`] = `
.c0 {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with resize 1`] = `undefined`;

exports[`Utility Props API matches Div with resize 2`] = `undefined`;

exports[`Utility Props API matches Div with resize 3`] = `undefined`;

exports[`Utility Props API matches Div with resize 4`] = `undefined`;

exports[`Utility Props API matches Div with roundedCircle 1`] = `
.c0 {
  border-radius: 50%;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with roundedPill 1`] = `
.c0 {
  border-radius: 50rem;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with text decoration 1`] = `
.c0 {
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with text reset 1`] = `
.c0 {
  color: inherit;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
/>
`;

exports[`Utility Props API matches Div with truncated text 1`] = `
.c0 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
>
  text
</div>
`;

exports[`Utility Props API matches Div with visibilities 1`] = `undefined`;

exports[`Utility Props API matches Div with visibilities 2`] = `undefined`;

exports[`Utility Props API matches Div with word break 1`] = `
.c0 {
  word-break: break-word;
  overflow-wrap: break-word;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="c0"
>
  text
</div>
`;

exports[`Utility Props API matches Divs with displays 1`] = `undefined`;

exports[`Utility Props API matches Divs with displays 2`] = `undefined`;

exports[`Utility Props API matches Divs with displays 3`] = `undefined`;

exports[`Utility Props API matches Divs with displays 4`] = `undefined`;

exports[`Utility Props API matches Divs with displays 5`] = `undefined`;

exports[`Utility Props API matches Divs with displays 6`] = `undefined`;

exports[`Utility Props API matches Divs with displays 7`] = `undefined`;

exports[`Utility Props API matches Divs with displays 8`] = `undefined`;

exports[`Utility Props API matches Divs with displays 9`] = `undefined`;

exports[`Utility Props API matches Divs with flex direction 1`] = `undefined`;

exports[`Utility Props API matches Divs with flex direction 2`] = `undefined`;

exports[`Utility Props API matches Divs with flex direction 3`] = `undefined`;

exports[`Utility Props API matches Divs with flex direction 4`] = `undefined`;

exports[`Utility Props API matches Divs with float 1`] = `undefined`;

exports[`Utility Props API matches Divs with float 2`] = `undefined`;

exports[`Utility Props API matches Divs with float 3`] = `undefined`;

exports[`Utility Props API matches Divs with justify content 1`] = `undefined`;

exports[`Utility Props API matches Divs with justify content 2`] = `undefined`;

exports[`Utility Props API matches Divs with justify content 3`] = `undefined`;

exports[`Utility Props API matches Divs with justify content 4`] = `undefined`;

exports[`Utility Props API matches Divs with justify content 5`] = `undefined`;

exports[`Utility Props API matches Divs with justify content 6`] = `undefined`;

exports[`Utility Props API matches Divs with overflow 1`] = `undefined`;

exports[`Utility Props API matches Divs with overflow 2`] = `undefined`;

exports[`Utility Props API matches Divs with paddings 1`] = `undefined`;

exports[`Utility Props API matches Divs with paddings 2`] = `undefined`;

exports[`Utility Props API matches Divs with paddings 3`] = `undefined`;

exports[`Utility Props API matches Divs with position 1`] = `undefined`;

exports[`Utility Props API matches Divs with position 2`] = `undefined`;

exports[`Utility Props API matches Divs with position 3`] = `undefined`;

exports[`Utility Props API matches Divs with position 4`] = `undefined`;

exports[`Utility Props API matches Divs with position 5`] = `undefined`;

exports[`Utility Props API matches Divs with rounded 1`] = `undefined`;

exports[`Utility Props API matches Divs with rounded 2`] = `undefined`;

exports[`Utility Props API matches Divs with rounded 3`] = `undefined`;

exports[`Utility Props API matches Divs with shadow 1`] = `undefined`;

exports[`Utility Props API matches Divs with shadow 2`] = `undefined`;

exports[`Utility Props API matches Divs with shadow 3`] = `undefined`;

exports[`Utility Props API matches Divs with shadow 4`] = `undefined`;

exports[`Utility Props API matches Divs with text align 1`] = `undefined`;

exports[`Utility Props API matches Divs with text align 2`] = `undefined`;

exports[`Utility Props API matches Divs with text align 3`] = `undefined`;

exports[`Utility Props API matches Divs with text align 4`] = `undefined`;

exports[`Utility Props API matches Divs with text weight 1`] = `undefined`;

exports[`Utility Props API matches Divs with text weight 2`] = `undefined`;

exports[`Utility Props API matches Divs with text weight 3`] = `undefined`;

exports[`Utility Props API matches Divs with text weight 4`] = `undefined`;

exports[`Utility Props API matches Divs with text weight 5`] = `undefined`;

exports[`Utility Props API matches Divs with text wrap 1`] = `undefined`;

exports[`Utility Props API matches Divs with text wrap 2`] = `undefined`;

exports[`Utility Props API matches Divs with transform 1`] = `undefined`;

exports[`Utility Props API matches Divs with transform 2`] = `undefined`;

exports[`Utility Props API matches Divs with transform 3`] = `undefined`;

exports[`Utility Props API matches Divs with vertical align 1`] = `undefined`;

exports[`Utility Props API matches Divs with vertical align 2`] = `undefined`;

exports[`Utility Props API matches Divs with vertical align 3`] = `undefined`;

exports[`Utility Props API matches Divs with vertical align 4`] = `undefined`;

exports[`Utility Props API matches Divs with vertical align 5`] = `undefined`;

exports[`Utility Props API matches Divs with width/height 1`] = `undefined`;

exports[`Utility Props API matches Divs with width/height 2`] = `undefined`;

exports[`Utility Props API matches Divs with width/height 3`] = `undefined`;

exports[`Utility Props API matches Divs with width/height 4`] = `undefined`;

exports[`Utility Props API matches Divs with width/height 5`] = `undefined`;

exports[`Utility Props API matches hidden Div 1`] = `
@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class=""
  hidden=""
/>
`;
